# -migration_pandas_pyspark

./: .pre-commit-config.yaml  Dockerfile  pipeline _pyspark.ipynb:Zone.Identifier  pipeline _pyspark_complet.ipynb  pyproject.toml  sales.db  settings.yaml
data/: sales_db.db
src/pandas/: pipeline_pandas.ipynb  pipeline_pandas.py
src/pyspark/: sales.db  test_pyspark.ipynb  test_spark.py
tests/: conftest.py  test_equivalence.py
