[project]
name = "migration_pandas_pyspark"
version = "0.1.0"
description = "Migration de pipelines pandas vers PySpark pour données e-commerce"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "pyspark>=3.5.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --color=yes"
